--- a/TP5/ajax/crud_user.html
+++ b/TP5/ajax/crud_user.html
@@ -55,16 +55,17 @@
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.4/datatables.min.css" rel="stylesheet" />
 
     <script src="https://cdn.datatables.net/v/dt/dt-1.13.4/datatables.min.js"></script>
+    <script src="config.js"></script>
     <script>
         let table;
-        let edit =false;
+        let edit = false;
         let row;
         $(document).ready(function () {
             initTable();
         })
         function initTable() {
             table = $('#table').DataTable({
-                ajax: "http://localhost/IDAW/TP4/API/users",
+                ajax: chemin + "/users",
                 dataSrc: '',
                 dom: 'Bfrtip',
                 columns: [
@@ -86,32 +87,53 @@
 
 
         function onFormSubmit() {
-            if(edit){
+            if (edit) {
+                let id = row.find("td:eq(0)").text();
+                let name = $("#inputNom").val();
+                let email = $("#inputEmail").val();
+                $("#inputNom").val('');
+                $("#inputEmail").val('');
                 event.preventDefault();
-            }
-            else{
-            event.preventDefault();
-            let nom = $("#inputNom").val();
-            let email = $("#inputEmail").val();
-            $("#inputNom").val('');
-            $("#inputEmail").val('');
-
-            $.ajax({
-                url: "http://localhost/IDAW/TP4/API/users",
-
-                method: "POST",
-
-
-                dataType: "json",
-                data:
-                {
-                    "name": nom,
+                var data = {
+                    "name": name,
                     "email": email,
-                },
-            });
-            table.destroy();
-            initTable();
-            }   
+                    "id": id
+                }
+                $.ajax({
+                    url: chemin + "/users",
+                    async: false,
+                    method: "PUT",
+
+
+                    dataType: "json",
+                    data: JSON.stringify(data),
+                });
+                table.destroy();
+                initTable();
+            }
+            else {
+                event.preventDefault();
+                let nom = $("#inputNom").val();
+                let email = $("#inputEmail").val();
+                $("#inputNom").val('');
+                $("#inputEmail").val('');
+
+                $.ajax({
+                    url: chemin + "/users",
+
+                    method: "POST",
+
+
+                    dataType: "json",
+                    data:
+                    {
+                        "name": nom,
+                        "email": email,
+                    },
+                });
+                table.destroy();
+                initTable();
+            }
         };
 
         $(document).on("click", ".delete", deleteElement);
@@ -124,7 +146,7 @@
             // remove the <tr> element
 
             $.ajax({
-                url: `http://localhost/IDAW/TP4/API/users?id=${id}`,
+                url: chemin + `/users?id=${id}`,
 
                 method: "DELETE",
 
